issue with book detail

--- a/app/templates/auth/author-list.hbs
+++ b/app/templates/auth/author-list.hbs
@@ -3,7 +3,7 @@
 		    <div class="card-panel grey lighten-5 z-depth-1">
 		      <div class="row valign-wrapper">
 		        <div class="col s2">
-		          <img src="https://cdn.pixabay.com/photo/2016/11/29/12/41/desk-1869579_960_720.jpg" class="circle responsive-img" class="circle responsive-img"> 
+		          <img src="" class="circle responsive-img" class="circle responsive-img"> 
 		        </div>
 		        <div class="col s8">
 		          <span class="black-text">
