--- a/app/templates/auth/book-edit.hbs
+++ b/app/templates/auth/book-edit.hbs
@@ -1,1 +1,69 @@
-{{outlet}}
+<div class="row">
+    <form class="col s12">
+	    <div class="row">
+		    <div class="row">
+	      		<div class="col s4">
+	      			<img src={{model.music-book.imgUrl}} class="responsive-img">
+	      		</div>
+		    </div>
+	    </div>
+	    <div class="row">
+	      	<div class="input-field col s12">
+		          <p>Title</p>	
+		         {{input type="text" value=model.music-book.title}}
+	    	</div>
+		</div>
+		<div class="row">
+	      	{{!-- <div class="input-field col s12">
+	      		<div class="row">
+	      			<div class="col s12">		      				
+		          		<p>Author</p>	
+	      			</div>
+	      		</div>
+	      		<div class="row">		      			
+		        	<div class="col s8">			        		
+		        		{{input type="text" value=model.music-book.author.fullName}}
+		        	</div>
+		        	<div class="col s4">
+		        		<a class="waves-effect waves-light btn" {{action 'showAuthors' on='click'}}>Change author</a>			        		
+		        	</div>
+		        	{{#if isChangingAuthor}}
+		        		<div class="col s12">
+							<p>Select an author</p>
+							{{#each model.authors as |author|}}
+								<p width="auto">
+									<a href="#" {{action 'selectAuthor' author on='click'}} > {{author.fullName}}</a>
+								</p>
+							{{/each}}
+		        		</div>
+					{{/if}}			        		
+	      		</div>
+	    	</div> --}}
+		</div>
+		<div class="row">
+	      	<div class="input-field col s12">
+		          <p>Price</p>	
+		         {{input type="text" value=model.music-book.price}}
+	    	</div>
+		</div>
+		<div class="row">
+	      	<div class="input-field col s12">
+		          <p>Image Url</p>	
+		         {{input type="text" value=model.music-book.imgUrl}}
+	    	</div>
+		</div>
+		{{!-- <div class="row">
+			<div class="col s12">
+				<div class="col s4">
+					<a class="waves-effect waves-light btn" {{action 'buyBook' model on='click'}}>Add cart</a>
+				</div>
+				<div class="col s4">
+					<a class="waves-effect waves-light btn" {{action 'saveBook' model.music-book on='click'}}>Save</a>
+				</div>
+				<div class="col s4">
+					<a class="waves-effect waves-light btn" {{action 'deleteBook' model on='click'}}>Delete</a>
+				</div>
+			</div>
+		</div> --}}
+    </form>
+ </div>
