--- a/app/templates/auth/book-list.hbs
+++ b/app/templates/auth/book-list.hbs
@@ -7,34 +7,32 @@
         <a href="#!" class="collection-item"><span class="badge"></span>Author</a>
     </div>
   </div> --}}
-
-
-
 		 {{#each model as |book|}}
 	
-		<div class="col s12">
-		    <div class="card-panel grey lighten-5 z-depth-1">
-		      <div class="row valign-wrapper">
-		        <div class="col s2">
-		          {{!-- <img src={{book.imgUrl}} class="circle responsive-img"> <!-- notice the "circle" class --> --}}
-		          <div class="avatar">
-		          	
-		          </div>
-		        </div>
-		        <div class="col s8">
-		          <span class="black-text">
-		            	{{book.title}}
-		          </span>
-		          <br>
-		          <span class="grey-text">
-		          		{{book.author}}
-		          </span>
-		        </div>
-		        <div class="col s2">
-		        	      <i class="material-icons more-vert">more_vert</i>
-		        </div>
-		      </div>
-		    </div>
-		</div>
-
- {{/each}}
+			{{#link-to 'auth.book-edit' music-book.id}}
+				<div class="col s12">
+						<div class="card-panel grey lighten-5 z-depth-1">
+							<div class="row valign-wrapper">
+								<div class="col s2">
+									<img src={{book.imgUrl}} class="circle responsive-img"> <!-- notice the "circle" class -->
+									<div class="avatar">
+										
+									</div>
+								</div>
+								<div class="col s8">
+									<span class="black-text">
+											{{book.title}}
+									</span>
+									<br>
+									<span class="grey-text">
+											{{book.author}}
+									</span>
+								</div>
+								<div class="col s2">
+												<i class="material-icons more-vert">more_vert</i>
+								</div>
+							</div>
+						</div>
+				</div>
+			{{/link-to}}
+ 		{{/each}}
