save button working

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -40,7 +40,7 @@ ul.tabs{
 li.indicator{
     display: none;
 }
-i.large.material-icons{
+.btn-floating.btn-large i{
     background: #FBC02D;
     outline: none;
 }
