--- a/app/templates/auth/book-edit.hbs
+++ b/app/templates/auth/book-edit.hbs
@@ -22,21 +22,8 @@
 	      		</div>
 	      		<div class="row">		      			
 		        	<div class="col s8">			        		
-		        		{{input type="text" value=model.author.fullName}}
-		        	</div>
-		        	<div class="col s4">
-		        		<a class="waves-effect waves-light btn" {{action 'showAuthors' on='click'}}>Change author</a>			        		
-		        	</div>
-		        	{{#if isChangingAuthor}}
-		        		<div class="col s12">
-							<p>Select an author</p>
-							{{#each model.authors as |author|}}
-								<p width="auto">
-									<a href="#" {{action 'selectAuthor' author on='click'}} > {{author.fullName}}</a>
-								</p>
-							{{/each}}
-		        		</div>
-					{{/if}}			        		
+		        		{{input type="text" value=model.author}}
+		        	</div>		        		
 	      		</div>
 	    	</div>
 		</div>
