--- a/app/templates/auth/book-list.hbs
+++ b/app/templates/auth/book-list.hbs
@@ -31,7 +31,7 @@
 						</div>
 						<div class="col s2">
 							{{#link-to 'auth.book-edit' music-book.id}}
-								<i class="material-icons edit">edit</i>					
+								<i class="material-icons more-vert">edit</i>
 							{{/link-to}}
 						</div>
 					</div>
