--- a/app/templates/auth/author-list.hbs
+++ b/app/templates/auth/author-list.hbs
@@ -24,3 +24,9 @@
 		    </div>
 		</div>  
 {{/each}}
+
+<div class="fixed-action-btn">
+	{{#link-to 'auth.author-add'}}
+		 <a class="btn-floating btn-large waves-effect waves-light fixed-action-btn color"><i class="material-icons">add</i></a>
+	{{/link-to}}
+</div>
