--- a/app/templates/auth/book-list.hbs
+++ b/app/templates/auth/book-list.hbs
@@ -26,7 +26,7 @@
 							</span>
 							<br>
 							<span class="grey-text">
-									{{music-book.author}}
+									{{music-book.author.fullName}}
 							</span>
 						</div>
 						<div class="col s2">
